assembly/src/snapshots/miden_assembly__tests__can_push_constant_word.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block push(2) push(3) push(4) push(5) noop noop noop end
end
