assembly/src/snapshots/miden_assembly__tests__comment_before_program.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block pad incr push(2) add end
end
