assembly/src/snapshots/miden_assembly__tests__const_word_from_string.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(10613494933894083877)
        push(4225041690115989743)
        push(1168993639339072050)
        push(13186528713821658146)
        noop
        noop
        noop
        noop
    end
end
