assembly/src/snapshots/miden_assembly__tests__constant_field_division.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block push(2) noop noop noop noop noop noop noop noop end
end
