assembly/src/snapshots/miden_assembly__tests__constant_hexadecimal_value.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block push(255) noop noop noop noop noop noop noop noop end
end
