assembly/src/snapshots/miden_assembly__tests__constant_numeric_expression.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    basic_block push(26) noop noop noop noop noop noop noop noop end
end
