assembly/src/snapshots/miden_assembly__tests__decorators_dyn-2.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    trace(0) trace(1) trace(2) trace(3) trace(4)
    dyn
    trace(5) trace(6) trace(7) trace(8) trace(9)
end
