assembly/src/snapshots/miden_assembly__tests__decorators_join_and_split.snap
---
source: assembly/src/tests.rs
expression: program
---
begin
    join
        trace(0) trace(1)
        if.true
            basic_block trace(2) add trace(3) end
        else
            basic_block trace(4) mul trace(5) end
        end
        trace(6)
        if.true
            basic_block trace(7) push(42) trace(8) noop end
        else
            basic_block trace(9) push(22) trace(10) noop end
        end
    end
    trace(11)
end
